[package]
name = "tbackup"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
dotenv = "0.15.0"
flate2 = "1.1.9"
hex = "0.4.3"
sha2 = "0.10.9"
tar = "0.4.44"
thiserror = "2.0.18"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.26.0"

[lints.clippy]
unwrap_used = "deny"
[lints.rust]
unsafe_code = "forbid"
